[package]
name = "beyond"
version = "0.1.3"
edition = "2024"
description = "Easily execute rust functions on an external machine instead of locally."
license = "MIT"
repository = "https://github.com/silvasch/beyond"
documentation = "https://docs.rs/beyond"

[dependencies]
base64 = "0.22.1"
beyond_derive = { version = "0.1.0", path = "../beyond_derive" }
serde = "1.0.219"
serde_json = "1.0.143"

[dev-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
